--- a/Websites/1 - basics/3_departments.html
+++ b/Websites/1 - basics/3_departments.html
@@ -9,8 +9,9 @@
     <H1>Departments page</H1>
     <p>This is the departments page</p>
     <p2>Check out the other pages</p2>
-    <p><a href="3_about.html">About</a></p>
     <p><a href="3.html">Main</a></p>
+    <p><a href="3_about.html">About</a></p>
+    <p><a href="3_departments.html">Departments</a></p>
     <p><a href="3_Gallery.html">Gallery</a></p>
     <p><a href="3_Contact.html">Contact</a></p>
 </body>
