--- a/Websites/3 - Texts, Images and lists/5.html
+++ b/Websites/3 - Texts, Images and lists/5.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercise 5</title>
+    <style>
+        .image{
+            width: 400px;
+        }
+
+        .container{
+            padding: 20px; width: 400px;
+        }
+
+
+        body{
+            font-family: 'Courier New', Courier, monospace;
+            font-size: medium;
+            color: darkblue;
+        }
+
+        li{
+            margin: none; padding: 3px;
+        }
+
+        ol{
+            background-color: orange;
+            color: white;
+        }
+
+        ul{
+            background-color: darkblue;
+            color: white;
+        }
+
+
+    </style>
 </head>
 <body>
+    <img class="image" src="img/weekplanner.gif" alt="Dit is een weekplanner">
+    <div class="container">
+        <ol>
+            <li>maandag</li>
+            <ol>
+            <li>Cisco</li>
+            <li>C#</li>
+            <ul><li>Canvas nakijken</li></ul>
+            </ol>
+            <li>dinsdag</li>
+            <li>woensdag</li>
+            <ol>Engels</ol>
+            <ul>
+                <li>Woordenboek</li>
+                <li>Cursus afhalen</li>
+            </ul>
+            <ol>C#</ol>
+            <ol>Websites</ol>
+            <li>donderdag</li>
+            <li>vrijdag</li>
+        </ol>
+    </div>
     
 </body>
 </html>
